--- a/restman/css/restman.css
+++ b/restman/css/restman.css
@@ -31,6 +31,27 @@ dl {
         margin: 0 0 0.5em 0;
     }
 
+header {
+    padding: 0.5rem 0;
+    height: 5rem;
+    box-sizing: content-box;
+    border-bottom: solid 1px #d3d3d3;
+    background-color: white;
+    text-align: center;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+}
+header .columns, header .row {
+    height: 100%;
+}
+
+header #Controls select, header #Controls input, #Send {
+    height: 100%;
+}
+
 progress {
     width: 100%;
     height: 0.25em;
@@ -38,6 +59,23 @@ progress {
 
 section h3 {
     font-size: 1em;
+}
+
+#Controls {
+    padding: 1rem 1rem 1rem 0;
+}
+
+#Controls > .row {
+    padding: 0.2rem;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ccc;
+    background-color: transparent;
+}
+
+#Controls input {
+    border-width: 0;
+    box-shadow: 0 0;
 }
 
 #HistoryList li a {
@@ -161,6 +199,10 @@ section h3 {
     padding: 0;
 }
 
+.no-margin {
+    margin: 0;
+}
+
 .row.full-width {
     max-width: 100%;
 }
@@ -188,4 +230,15 @@ section h3 {
 
 .top-bar {
     margin-bottom: 1rem;
+}
+
+.logo {
+    margin: 0.5rem 1rem;
+    text-align: center;
+}
+
+.logo-desc {
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
 }
